<?xml version="1.0"?>
<package format="2">
  <name>mgm</name>
  <version>0.0.0</version>
  <description>ROS Wrapper library for MGM: A Significantly More Global Matching for Stereovision</description>

  <author email="facciolo@cmla.ens-cachan.fr">Gabriele Facciolo</author>
  <maintainer email="methyldragon@gmail.com">methylDragon</maintainer>
  <url type="website">https://github.com/gfacciol/mgm</url>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
